Design : fragement_group 수정
및 layout 변경에 따른 수정사항 수정

--- a/app/src/main/res/layout/fragment_group.xml
+++ b/app/src/main/res/layout/fragment_group.xml
@@ -4,41 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingHorizontal="24dp"
     tools:context=".UI.Group.GroupFragment">
 
     <TextView
-        android:id="@+id/title_tv"
+        android:id="@+id/tv_group_title"
         style="@style/TextAppearance.AppCompat.Headline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="26dp"
-        android:text="모임"
-        android:textColor="#242424"
+        android:layout_marginTop="26dp"
+        android:text="@string/group_title"
+        android:textColor="@color/texthigh"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/group_count_tv"
+        android:id="@+id/tv_group_count"
         android:layout_width="24dp"
         android:layout_height="24dp"
-        android:layout_margin="6dp"
+        android:layout_marginStart="6dp"
         android:background="@drawable/background_counter"
         android:gravity="center"
         android:textColor="@color/purpleMain"
         android:textSize="12sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/title_tv"
-        app:layout_constraintStart_toEndOf="@id/title_tv"
-        app:layout_constraintTop_toTopOf="@id/title_tv" />
+        app:layout_constraintBottom_toBottomOf="@id/tv_group_title"
+        app:layout_constraintStart_toEndOf="@id/tv_group_title"
+        app:layout_constraintTop_toTopOf="@id/tv_group_title" />
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/category_tl"
+        android:id="@+id/tl_group_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@id/title_tv"
-        app:layout_constraintTop_toBottomOf="@id/title_tv"
+        app:layout_constraintStart_toStartOf="@id/tv_group_title"
+        app:layout_constraintTop_toBottomOf="@id/tv_group_title"
         app:tabGravity="start"
         app:tabIndicatorColor="@color/purpleMain"
         app:tabIndicatorHeight="2dp"
@@ -54,22 +55,22 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/category_tl">
+        app:layout_constraintTop_toBottomOf="@id/tl_group_category">
 
         <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/group_list_vp"
+            android:id="@+id/vp_group_list"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:padding="12dp"
+            android:paddingVertical="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/category_tl" />
+            app:layout_constraintTop_toBottomOf="@id/tl_group_category" />
 
     </androidx.core.widget.NestedScrollView>
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/group_plus_fab"
+        android:id="@+id/fab_group_plus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -78,30 +79,30 @@
         android:clickable="false"
         android:contentDescription="모임추가하기"
         android:outlineSpotShadowColor="@android:color/transparent"
-        android:src="@drawable/icon_plus_small"
-        app:layout_constraintBottom_toBottomOf="@id/main_fab"
-        app:layout_constraintEnd_toEndOf="@id/main_fab"
-        app:layout_constraintStart_toStartOf="@id/main_fab"
-        app:layout_constraintTop_toTopOf="@id/main_fab" />
+        android:src="@drawable/icon_plus_purple_24"
+        app:layout_constraintBottom_toBottomOf="@id/fab_group_main"
+        app:layout_constraintEnd_toEndOf="@id/fab_group_main"
+        app:layout_constraintStart_toStartOf="@id/fab_group_main"
+        app:layout_constraintTop_toTopOf="@id/fab_group_main" />
 
     <TextView
-        android:id="@+id/group_plus_fab_tv"
+        android:id="@+id/tv_group_plus_fab_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="11dp"
         android:elevation="1dp"
         android:fontFamily="@font/pretendard"
-        android:text="모임추가"
+        android:text="@string/group_plus_content"
         android:textColor="@color/grayWhite"
         android:textSize="14sp"
         android:textStyle="bold"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/group_plus_fab"
-        app:layout_constraintEnd_toStartOf="@id/group_plus_fab"
-        app:layout_constraintTop_toTopOf="@id/group_plus_fab" />
+        app:layout_constraintBottom_toBottomOf="@id/fab_group_plus"
+        app:layout_constraintEnd_toStartOf="@id/fab_group_plus"
+        app:layout_constraintTop_toTopOf="@id/fab_group_plus" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/group_enroll_fab"
+        android:id="@+id/fab_group_enroll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -110,41 +111,41 @@
         android:clickable="false"
         android:outlineSpotShadowColor="@android:color/transparent"
         android:src="@drawable/icon_enroll"
-        app:layout_constraintBottom_toBottomOf="@id/main_fab"
-        app:layout_constraintEnd_toEndOf="@id/main_fab"
-        app:layout_constraintStart_toStartOf="@id/main_fab"
-        app:layout_constraintTop_toTopOf="@id/main_fab" />
+        app:layout_constraintBottom_toBottomOf="@id/fab_group_main"
+        app:layout_constraintEnd_toEndOf="@id/fab_group_main"
+        app:layout_constraintStart_toStartOf="@id/fab_group_main"
+        app:layout_constraintTop_toTopOf="@id/fab_group_main" />
 
     <TextView
-        android:id="@+id/group_enroll_fab_tv"
+        android:id="@+id/tv_group_enroll_fab_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="11dp"
         android:elevation="1dp"
         android:fontFamily="@font/pretendard"
-        android:text="모임참여"
+        android:text="@string/group_enroll_content"
         android:textColor="@color/grayWhite"
         android:textSize="14sp"
         android:textStyle="bold"
         android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/group_enroll_fab"
-        app:layout_constraintEnd_toStartOf="@id/group_enroll_fab"
-        app:layout_constraintTop_toTopOf="@id/group_enroll_fab" />
+        app:layout_constraintBottom_toBottomOf="@id/fab_group_enroll"
+        app:layout_constraintEnd_toStartOf="@id/fab_group_enroll"
+        app:layout_constraintTop_toTopOf="@id/fab_group_enroll" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/main_fab"
+        android:id="@+id/fab_group_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
+        android:layout_marginBottom="24dp"
         android:background="@color/purpleMain"
         android:backgroundTint="@color/purpleMain"
         android:outlineSpotShadowColor="@android:color/transparent"
-        android:src="@drawable/icon_plus"
+        android:src="@drawable/icon_plus_gray_32"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <View
-        android:id="@+id/fab_background_v"
+    <!--<View
+        android:id="@+id/v_fab_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#CC000000"
@@ -153,6 +154,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
