--- a/app/src/main/res/layout/item_plusparticipant.xml
+++ b/app/src/main/res/layout/item_plusparticipant.xml
@@ -21,7 +21,7 @@
             android:id="@+id/iv_plus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/icon_plus_gray"
+            android:src="@drawable/icon_plus_gray_24"
             android:layout_gravity="center" />
     </androidx.cardview.widget.CardView>
 
