--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -1,73 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/item_cl"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cl_group_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
 
     <ImageView
-        android:id="@+id/item_group_star_iv"
+        android:id="@+id/iv_group_item_star"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_margin="8dp"
         android:adjustViewBounds="true"
-        android:src="@drawable/icon_star"
-        android:elevation="3dp"
         android:contentDescription="즐겨찾기 유무"
+        android:elevation="3dp"
+        android:src="@drawable/icon_star"
         android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="@id/item_group_cv"
-        app:layout_constraintTop_toTopOf="@id/item_group_cv" />
+        app:layout_constraintEnd_toEndOf="@id/cv_group_item"
+        app:layout_constraintTop_toTopOf="@id/cv_group_item" />
 
     <ImageView
-        android:id="@+id/item_group_star_un_iv"
+        android:id="@+id/iv_group_item_star_un"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_margin="8dp"
         android:adjustViewBounds="true"
-        android:src="@drawable/icon_star_un"
-        android:elevation="3dp"
         android:contentDescription="즐겨찾기 유무"
-        app:layout_constraintEnd_toEndOf="@id/item_group_cv"
-        app:layout_constraintTop_toTopOf="@id/item_group_cv" />
+        android:elevation="3dp"
+        android:src="@drawable/icon_star_un"
+        app:layout_constraintEnd_toEndOf="@id/cv_group_item"
+        app:layout_constraintTop_toTopOf="@id/cv_group_item" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/item_group_cv"
+        android:id="@+id/cv_group_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elevation="0dp"
+        android:outlineSpotShadowColor="@color/grayWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:elevation="0dp"
-        android:outlineSpotShadowColor="@color/grayWhite">
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/item_group_iv"
+            android:id="@+id/iv_group_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:src="@drawable/icon_close"
             android:contentDescription="모임 사진"
-            android:elevation="0dp"/>
+            android:elevation="0dp"
+            android:src="@drawable/icon_close" />
 
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/item_group_title_tv"
+        android:id="@+id/tv_group_item_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:ellipsize="end"
         android:maxLines="2"
+        android:text=""
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
-        android:text="예시테스트 작성중입니다. 예시테스트 작성중입니다. 예시테스트 작성중입니다. 예시테스트 작성중입니다. 예시테스트 작성중입니다. 예시테스트 작성중입니다. 예시테스트 작성중입니다. 예시테스트 작성중입니다. 예시테스트 작성중입니다. 예시테스트 작성중입니다. "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/item_group_cv"
-        android:layout_marginTop="10dp"/>
+        app:layout_constraintTop_toBottomOf="@id/cv_group_item" />
 
-    <TextView
+    <!--<TextView
         android:id="@+id/new_tag_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -77,8 +77,8 @@
         android:text="new"
         android:textColor="@color/purpleMain"
         android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="@id/item_group_title_tv"
-        app:layout_constraintTop_toBottomOf="@id/item_group_title_tv"
+        app:layout_constraintStart_toStartOf="@id/tv_group_item_title"
+        app:layout_constraintTop_toBottomOf="@id/tv_group_item_title"
         android:visibility="invisible"/>
 
     <TextView
@@ -92,8 +92,8 @@
         android:textColor="@color/white"
         android:textSize="10sp"
         app:layout_constraintStart_toEndOf="@id/new_tag_tv"
-        app:layout_constraintTop_toBottomOf="@id/item_group_title_tv"
+        app:layout_constraintTop_toBottomOf="@id/tv_group_item_title"
         android:layout_marginStart="6dp"
-        android:visibility="invisible"/>
+        android:visibility="invisible"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
