--- a/app/src/main/res/layout/activity_time_input.xml
+++ b/app/src/main/res/layout/activity_time_input.xml
@@ -144,8 +144,8 @@
                 app:layout_constraintEnd_toEndOf="parent"/>
 
             <ImageView
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:src="@drawable/clock_check"
                 android:layout_margin="9dp"
                 app:layout_constraintStart_toStartOf="@id/mcv_clock"
