--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -53,7 +53,7 @@
 
     <!--회원정보-->
     <androidx.cardview.widget.CardView
-        android:id="@+id/my_info_cv"
+        android:id="@+id/cv_info_my"
         android:layout_width="match_parent"
         android:layout_height="24dp"
         android:layout_marginHorizontal="24dp"
@@ -95,7 +95,7 @@
         android:layout_marginHorizontal="24dp"
         android:layout_marginTop="24dp"
         app:cardElevation="0dp"
-        app:layout_constraintTop_toBottomOf="@id/my_info_cv">
+        app:layout_constraintTop_toBottomOf="@id/cv_info_my">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
