--- a/app/src/main/res/layout/activity_create_plan.xml
+++ b/app/src/main/res/layout/activity_create_plan.xml
@@ -65,7 +65,7 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_title"/>
 
             <ImageView
-                android:id="@+id/btn_text_cancle"
+                android:id="@+id/iv_name_text_cancel"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 app:layout_constraintBottom_toTopOf="@id/plan_underline_ll"
@@ -184,7 +184,7 @@
                 android:id="@+id/iv_info"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
-                android:src="@drawable/error_purple"
+                android:src="@drawable/ic_error_purple"
                 android:layout_marginTop="6dp"
                 app:layout_constraintStart_toStartOf="@id/tv_underline_ll2"
                 app:layout_constraintTop_toBottomOf="@id/tv_underline_ll2"/>
