--- a/app/src/main/res/layout/activity_edit_plan.xml
+++ b/app/src/main/res/layout/activity_edit_plan.xml
@@ -65,7 +65,7 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_title"/>
 
             <ImageView
-                android:id="@+id/btn_text_cancle"
+                android:id="@+id/iv_name_text_cancel"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 app:layout_constraintBottom_toTopOf="@id/plan_underline_ll"
