--- a/app/src/main/res/layout/activity_name_change.xml
+++ b/app/src/main/res/layout/activity_name_change.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <!--n_change-->
     <ImageView
-        android:id="@+id/n_change_btn_back_iv"
+        android:id="@+id/iv_name_back_btn"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@drawable/chevron_left"
@@ -15,7 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
-        android:id="@+id/n_change_text1_tv"
+        android:id="@+id/tv_name_title"
         android:layout_width="wrap_content"
         android:layout_height="22dp"
         android:text="이름변경"
@@ -24,11 +24,11 @@
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/n_change_btn_back_iv"
-        app:layout_constraintBottom_toBottomOf="@id/n_change_btn_back_iv"/>
+        app:layout_constraintTop_toTopOf="@id/iv_name_back_btn"
+        app:layout_constraintBottom_toBottomOf="@id/iv_name_back_btn"/>
 
     <TextView
-        android:id="@+id/n_change_text2_tv"
+        android:id="@+id/tv_name_title2"
         android:layout_width="wrap_content"
         android:layout_height="18dp"
         android:text="이름"
@@ -36,11 +36,11 @@
         android:fontFamily="@font/pretendard"
         android:layout_marginTop="46dp"
         android:layout_marginStart="24dp"
-        app:layout_constraintTop_toBottomOf="@id/n_change_text1_tv"
+        app:layout_constraintTop_toBottomOf="@id/tv_name_title"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
-        android:id="@+id/n_change_et"
+        android:id="@+id/et_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -52,33 +52,33 @@
         android:background="@null"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/n_change_text2_tv"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_name_title2"/>
 
     <ImageView
-        android:id="@+id/btn_text_cancle"
+        android:id="@+id/iv_name_text_cancel"
         android:layout_width="16dp"
         android:layout_height="16dp"
-        app:layout_constraintBottom_toTopOf="@id/tv_underline_ll"
-        app:layout_constraintRight_toRightOf="@id/tv_underline_ll"
-        android:layout_marginBottom="5dp"
-        android:src="@drawable/btn_clear" />
+        app:layout_constraintBottom_toTopOf="@id/ll_name_underline"
+        app:layout_constraintRight_toRightOf="@id/ll_name_underline"
+        android:layout_marginBottom="12dp"
+        android:src="@drawable/btn_clear"/>
 
     <ImageView
-        android:id="@+id/simbol_err_cancle"
+        android:id="@+id/iv_name_error_empty"
         android:layout_width="16dp"
         android:layout_height="16dp"
-        app:layout_constraintBottom_toTopOf="@id/tv_underline_ll"
-        app:layout_constraintRight_toRightOf="@id/tv_underline_ll"
+        app:layout_constraintBottom_toTopOf="@id/ll_name_underline"
+        app:layout_constraintRight_toRightOf="@id/ll_name_underline"
         android:layout_marginBottom="5dp"
         android:visibility="gone"
-        android:src="@drawable/error_empty_red"/>
+        android:src="@drawable/ic_error_empty_red"/>
 
 
     <LinearLayout
-        android:id="@+id/tv_underline_ll"
+        android:id="@+id/ll_name_underline"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        app:layout_constraintTop_toBottomOf="@id/n_change_et"
+        app:layout_constraintTop_toBottomOf="@id/et_name"
         android:layout_marginTop="5dp"
         android:layout_marginHorizontal="20dp"
         android:background="@color/gray200"
@@ -86,17 +86,17 @@
 
     <!--권장사항 문구-->
     <ImageView
-        android:id="@+id/n_change_info1_iv"
+        android:id="@+id/iv_name_info_1"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:src="@drawable/error_purple"
+        android:src="@drawable/ic_error_purple"
         android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@id/tv_underline_ll"
-        app:layout_constraintTop_toBottomOf="@id/tv_underline_ll"/>
+        app:layout_constraintStart_toStartOf="@id/ll_name_underline"
+        app:layout_constraintTop_toBottomOf="@id/ll_name_underline"/>
 
 
     <TextView
-        android:id="@+id/n_change_info1_tv"
+        android:id="@+id/tv_name_info_1"
         android:layout_width="wrap_content"
         android:layout_height="16dp"
         android:text="공백 없이 20자 이내의 한글, 영어, 숫자로 입력해주세요."
@@ -104,21 +104,21 @@
         android:textSize="12sp"
         android:textColor="@color/gray800"
         android:layout_marginStart="5dp"
-        app:layout_constraintStart_toEndOf="@id/n_change_info1_iv"
-        app:layout_constraintTop_toTopOf="@id/n_change_info1_iv"
+        app:layout_constraintStart_toEndOf="@id/iv_name_info_1"
+        app:layout_constraintTop_toTopOf="@id/iv_name_info_1"
         />
 
     <ImageView
-        android:id="@+id/n_change_info2_iv"
+        android:id="@+id/iv_name_info_2"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:src="@drawable/error_purple"
+        android:src="@drawable/ic_error_purple"
         android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@id/n_change_info1_iv"
-        app:layout_constraintTop_toBottomOf="@id/n_change_info1_iv"/>
+        app:layout_constraintStart_toStartOf="@id/iv_name_info_1"
+        app:layout_constraintTop_toBottomOf="@id/iv_name_info_1"/>
 
     <TextView
-        android:id="@+id/n_change_info2_tv"
+        android:id="@+id/tv_name_info_2"
         android:layout_width="wrap_content"
         android:layout_height="16dp"
         android:text="참여자 간 원활한 소통을 위해 실명을 권장합니다."
@@ -126,96 +126,13 @@
         android:textSize="12sp"
         android:textColor="@color/gray800"
         android:layout_marginStart="5dp"
-        app:layout_constraintStart_toEndOf="@id/n_change_info2_iv"
-        app:layout_constraintTop_toTopOf="@id/n_change_info2_iv"
+        app:layout_constraintStart_toEndOf="@id/iv_name_info_2"
+        app:layout_constraintTop_toTopOf="@id/iv_name_info_2"
         />
-<!--    <EditText-->
-<!--        android:id="@+id/n_change_et"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="45dp"-->
-<!--        android:layout_weight="1"-->
-<!--        android:maxLength="20"-->
-<!--        android:inputType="text"-->
-<!--        android:hint="애플카카오"-->
-<!--        android:textColorHint="@color/gray800"-->
-<!--        android:layout_marginTop="8dp"-->
-<!--        android:layout_marginHorizontal="24dp"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/n_change_text2_tv"/>-->
-
-<!--    &lt;!&ndash;입력창 x/error 버튼&ndash;&gt;-->
-<!--    <FrameLayout-->
-<!--        android:id="@+id/frm_name_state"-->
-<!--        android:layout_width="16dp"-->
-<!--        android:layout_height="16dp"-->
-<!--        android:layout_marginEnd="4dp"-->
-<!--        app:layout_constraintTop_toTopOf="@id/n_change_et"-->
-<!--        app:layout_constraintBottom_toBottomOf="@id/n_change_et"-->
-<!--        app:layout_constraintEnd_toEndOf="@id/n_change_et">-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/n_change_btn_clear"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:src="@drawable/btn_clear"/>-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/n_change_btn_error"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:src="@drawable/error_empty_red"-->
-<!--            android:visibility="gone"/>-->
-<!--    </FrameLayout>-->
-
-<!--    &lt;!&ndash;권장사항 문구&ndash;&gt;-->
-<!--    <ImageView-->
-<!--        android:id="@+id/n_change_info1_iv"-->
-<!--        android:layout_width="15dp"-->
-<!--        android:layout_height="15dp"-->
-<!--        android:src="@drawable/error_purple"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        app:layout_constraintStart_toStartOf="@id/tv_underline_ll"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/tv_underline_ll"/>-->
-
-
-<!--    <TextView-->
-<!--        android:id="@+id/name_info1_tv"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="16dp"-->
-<!--        android:text="공백 없이 20자 이내의 한글, 영어, 숫자로 입력해주세요."-->
-<!--        android:fontFamily="@font/pretendard"-->
-<!--        android:textSize="12sp"-->
-<!--        android:layout_marginStart="5dp"-->
-<!--        app:layout_constraintStart_toEndOf="@id/name_info1_iv"-->
-<!--        app:layout_constraintTop_toTopOf="@id/name_info1_iv"-->
-<!--        />-->
-
-<!--    <ImageView-->
-<!--        android:id="@+id/name_info2_iv"-->
-<!--        android:layout_width="15dp"-->
-<!--        android:layout_height="15dp"-->
-<!--        android:src="@drawable/error_purple"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        app:layout_constraintStart_toStartOf="@id/name_info1_iv"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/name_info1_iv"/>-->
-
-<!--    <TextView-->
-<!--        android:id="@+id/name_info2_tv"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="16dp"-->
-<!--        android:text="참여자 간 원활한 소통을 위해 실명을 권장합니다."-->
-<!--        android:fontFamily="@font/pretendard"-->
-<!--        android:textSize="12sp"-->
-<!--        android:layout_marginStart="5dp"-->
-<!--        app:layout_constraintStart_toEndOf="@id/name_info2_iv"-->
-<!--        app:layout_constraintTop_toTopOf="@id/name_info2_iv"-->
-<!--        />-->
-
 
     <!--완료 버튼-->
     <androidx.cardview.widget.CardView
-        android:id="@+id/n_change_btn_cv"
+        android:id="@+id/cv_name_done_btn"
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:layout_marginHorizontal="24dp"
