--- a/app/src/main/res/layout/fragment_name_input.xml
+++ b/app/src/main/res/layout/fragment_name_input.xml
@@ -6,7 +6,7 @@
 
 
     <TextView
-        android:id="@+id/name_text1_tv"
+        android:id="@+id/tv_name_input_title"
         android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:text="이름을 입력해주세요"
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"/>
 
     <EditText
-        android:id="@+id/name_et"
+        android:id="@+id/et_name_input"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_weight="1"
@@ -32,34 +32,34 @@
         android:background="@null"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/name_text1_tv"/>
+        app:layout_constraintTop_toBottomOf="@id/tv_name_input_title"/>
 
     <ImageView
-        android:id="@+id/btn_text_cancle"
+        android:id="@+id/iv_name_input_text_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/tv_underline_ll"
-        app:layout_constraintRight_toRightOf="@id/tv_underline_ll"
+        app:layout_constraintBottom_toTopOf="@id/ll_name_input_underline"
+        app:layout_constraintRight_toRightOf="@id/ll_name_input_underline"
         android:layout_marginBottom="5dp"
         android:visibility="gone"
         android:src="@drawable/btn_clear"/>
 
     <ImageView
-        android:id="@+id/simbol_err_cancle"
+        android:id="@+id/iv_name_input_error_empty"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        app:layout_constraintBottom_toTopOf="@id/tv_underline_ll"
-        app:layout_constraintRight_toRightOf="@id/tv_underline_ll"
+        app:layout_constraintBottom_toTopOf="@id/ll_name_input_underline"
+        app:layout_constraintRight_toRightOf="@id/ll_name_input_underline"
         android:layout_marginBottom="5dp"
         android:visibility="gone"
-        android:src="@drawable/error_empty_red"/>
+        android:src="@drawable/ic_error_empty_red"/>
 
 
     <LinearLayout
-        android:id="@+id/tv_underline_ll"
+        android:id="@+id/ll_name_input_underline"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        app:layout_constraintTop_toBottomOf="@id/name_et"
+        app:layout_constraintTop_toBottomOf="@id/et_name_input"
         android:layout_marginTop="5dp"
         android:layout_marginHorizontal="20dp"
         android:background="@color/gray200"
@@ -67,52 +67,52 @@
 
     <!--권장사항 문구-->
     <ImageView
-        android:id="@+id/name_info1_iv"
+        android:id="@+id/iv_name_input_info_1"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:src="@drawable/error_purple"
+        android:src="@drawable/ic_error_purple"
         android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@id/tv_underline_ll"
-        app:layout_constraintTop_toBottomOf="@id/tv_underline_ll"/>
+        app:layout_constraintStart_toStartOf="@id/ll_name_input_underline"
+        app:layout_constraintTop_toBottomOf="@id/ll_name_input_underline"/>
 
 
     <TextView
-        android:id="@+id/name_info1_tv"
+        android:id="@+id/tv_name_input_info_1"
         android:layout_width="wrap_content"
         android:layout_height="16dp"
         android:text="공백 없이 20자 이내의 한글, 영어, 숫자로 입력해주세요."
         android:fontFamily="@font/pretendard"
         android:textSize="12sp"
         android:layout_marginStart="5dp"
-        app:layout_constraintStart_toEndOf="@id/name_info1_iv"
-        app:layout_constraintTop_toTopOf="@id/name_info1_iv"
+        app:layout_constraintStart_toEndOf="@id/iv_name_input_info_1"
+        app:layout_constraintTop_toTopOf="@id/iv_name_input_info_1"
         />
 
     <ImageView
-        android:id="@+id/name_info2_iv"
+        android:id="@+id/iv_name_input_info_2"
         android:layout_width="15dp"
         android:layout_height="15dp"
-        android:src="@drawable/error_purple"
+        android:src="@drawable/ic_error_purple"
         android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@id/name_info1_iv"
-        app:layout_constraintTop_toBottomOf="@id/name_info1_iv"/>
+        app:layout_constraintStart_toStartOf="@id/iv_name_input_info_1"
+        app:layout_constraintTop_toBottomOf="@id/iv_name_input_info_1"/>
 
     <TextView
-        android:id="@+id/name_info2_tv"
+        android:id="@+id/tv_name_input_info_2"
         android:layout_width="wrap_content"
         android:layout_height="16dp"
         android:text="참여자 간 원활한 소통을 위해 실명을 권장합니다."
         android:fontFamily="@font/pretendard"
         android:textSize="12sp"
         android:layout_marginStart="5dp"
-        app:layout_constraintStart_toEndOf="@id/name_info2_iv"
-        app:layout_constraintTop_toTopOf="@id/name_info2_iv"
+        app:layout_constraintStart_toEndOf="@id/iv_name_input_info_2"
+        app:layout_constraintTop_toTopOf="@id/iv_name_input_info_2"
         />
 
 
     <!--완료 버튼-->
     <androidx.cardview.widget.CardView
-        android:id="@+id/name_btn_cv"
+        android:id="@+id/cv_name_input_done_btn"
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:layout_marginHorizontal="24dp"
