--- a/app/src/main/res/layout/activity_withdraw_done.xml
+++ b/app/src/main/res/layout/activity_withdraw_done.xml
@@ -5,19 +5,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <!--w_done-->
     <ImageView
-        android:id="@+id/w_done_check_iv"
+        android:id="@+id/iv_withdraw_done_check"
         android:layout_width="68dp"
         android:layout_height="68dp"
-        android:src="@drawable/btn_check_round_purple"
+        android:src="@drawable/ic_check_round_purple"
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintVertical_bias="0.4"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/w_done_tv1"/>
+        app:layout_constraintBottom_toTopOf="@id/tv_withdraw_done_text1"/>
 
     <TextView
-        android:id="@+id/w_done_tv1"
+        android:id="@+id/tv_withdraw_done_text1"
         android:layout_width="wrap_content"
         android:layout_height="24dp"
         android:text="회원탈퇴가 완료되었습니다."
@@ -25,11 +25,11 @@
         android:layout_marginTop="24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/w_done_check_iv"
-        app:layout_constraintBottom_toBottomOf="@id/w_done_tv2"/>
+        app:layout_constraintTop_toBottomOf="@id/iv_withdraw_done_check"
+        app:layout_constraintBottom_toBottomOf="@id/tv_withdraw_done_text2"/>
 
     <TextView
-        android:id="@+id/w_done_tv2"
+        android:id="@+id/tv_withdraw_done_text2"
         android:layout_width="wrap_content"
         android:layout_height="24dp"
         android:text="그동안 커넷 서비스를 이용해주셔서 감사합니다."
@@ -38,13 +38,13 @@
         app:layout_constraintVertical_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/w_done_tv1"
+        app:layout_constraintTop_toBottomOf="@id/tv_withdraw_done_text1"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 
     <!--완료 버튼-->
     <androidx.cardview.widget.CardView
-        android:id="@+id/done_btn_cv"
+        android:id="@+id/cv_withdraw_done_btn"
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:layout_marginHorizontal="24dp"
