--- a/app/src/main/res/layout/activity_group_main.xml
+++ b/app/src/main/res/layout/activity_group_main.xml
@@ -24,7 +24,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="393dp"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:src="@drawable/profile_gray" />
+                    android:src="@drawable/ic_profile_gray" />
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/cl_btnset"
                     android:layout_width="match_parent"
