--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -41,7 +41,7 @@
                 android:id="@+id/iv_info_photo"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/profile_gray"
+                android:src="@drawable/ic_profile_gray"
                 android:layout_marginTop="56dp"
                 app:layout_constraintTop_toBottomOf="@id/tv_info_title"
                 app:layout_constraintStart_toStartOf="parent"
@@ -99,10 +99,10 @@
                         android:layout_width="26dp"
                         android:layout_height="26dp"
                         android:src="@drawable/chevron_right"
+                        app:tint="@color/gray200"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:tint="@color/gray200" />
+                        app:layout_constraintEnd_toEndOf="parent"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
