--- a/app/src/main/res/layout/fragment_promisedetail.xml
+++ b/app/src/main/res/layout/fragment_promisedetail.xml
@@ -184,7 +184,7 @@
             android:layout_height="16dp"
             app:layout_constraintTop_toTopOf="@id/tv_promisetimeinfo"
             app:layout_constraintRight_toRightOf="parent"
-            android:src="@drawable/clock"/>
+            android:src="@drawable/btn_clock"/>
 
         <View
             android:id="@+id/view_line3"
