Add : res/drawable 사진 추가 및 수정

--- a/app/src/main/res/drawable/icon_error_end_resize.xml
+++ b/app/src/main/res/drawable/icon_error_end_resize.xml
@@ -3,5 +3,5 @@
     <item
         android:width="16dp"
         android:height="16dp"
-        android:drawable="@drawable/icon_error_end"/>
+        android:drawable="@drawable/icon_error_empty"/>
 </layer-list>
