--- a/app/src/main/res/drawable/icon_close.xml
+++ b/app/src/main/res/drawable/icon_close.xml
@@ -5,9 +5,9 @@
     android:viewportHeight="24">
     <path
         android:fillColor="#00000000"
-        android:pathData="M16,20L8,12L16,4"
+        android:pathData="M20,4L4,20M4,4L20,20"
         android:strokeWidth="2"
-        android:strokeColor="#6F6F6F"
+        android:strokeColor="#555555"
         android:strokeLineCap="round"
         android:strokeLineJoin="round" />
 </vector>
