--- a/app/src/main/res/layout/activity_group_main.xml
+++ b/app/src/main/res/layout/activity_group_main.xml
@@ -119,7 +119,7 @@
                     android:layout_height="16dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tv_group_name"
-                    android:src="@drawable/user"
+                    android:src="@drawable/icon_people"
                     android:layout_marginLeft="24dp"
                     android:layout_marginTop="6dp"/>
 
