--- a/app/src/main/res/layout/dialog_bottom_sheet_members.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_members.xml
@@ -37,6 +37,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/handler_bsdh"
+        android:background="@color/grayWhite"
         app:spanCount="2" />
 
 
