--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -39,7 +39,7 @@
         android:layout_width="12dp"
         android:layout_height="12dp"
         android:layout_marginEnd="4dp"
-        android:src="@drawable/user"
+        android:src="@drawable/icon_people"
         app:layout_constraintBottom_toBottomOf="@id/tv_history_num"
         app:layout_constraintEnd_toStartOf="@id/tv_history_num"
         app:layout_constraintTop_toTopOf="@id/tv_history_num"
