--- a/app/src/main/res/layout/item_plusparticipant.xml
+++ b/app/src/main/res/layout/item_plusparticipant.xml
@@ -46,6 +46,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="149dp"
-        android:src="@drawable/iv_minus"/>
+        android:src="@drawable/icon_minus_circle"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
